"use strict"

module.exports = class Element {

    draw(ctx) { 

    }
}
